# PyPiper

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: schema-models.md
secrets/: aws.env  clickhouse.env  data-providers.env  flink.env  global.env  kafka.env  schema-registry.env
src/stream/: main.py
src/stream/config/: __init__.py  settings.py
src/stream/models/: app.py  mypy.ini  pipeline.py  schema.py
src/streaming/: kafka_clients.py  kafka_data.py  pipelines.py
