[tool.poetry]
name = "stream"
version = "0.1.0"
description = "A module for processing streaming data with Kafka and Confluent."
authors = ["The Unnatural Group, LLC <info@unnaturalgroup.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://dev.tradesignals.io"
repository = "https://github.com/Tradesignals-io/stream"
packages = [{ include = "src/stream" }]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^24.3.0"
cattrs = "^24.1.2"
confluent-kafka = {extras = ["avro"], version = "^2.7.0"}
dotenv-derive = "^0.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Apache License 2.0
# Copyright (c) 2023 The Unnatural Group, LLC
# For more information, visit https://dev.tradesignals.io
